Fixed spacing issues for main containers on search and beer dsplay pages

--- a/client/src/scss/BeerDisplay.module.scss
+++ b/client/src/scss/BeerDisplay.module.scss
@@ -7,7 +7,6 @@
   justify-content: center;
   margin: 8rem 2rem 5rem 2rem;
   box-shadow: $box-shadow;
-  border-radius: 0.5rem;
   @include respond-to('small') {
     padding-bottom: 2rem;
   }
