--- a/client/src/scss/Search.module.scss
+++ b/client/src/scss/Search.module.scss
@@ -5,9 +5,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 10rem 2rem 5rem 2rem;
+  margin: 8rem 2rem 5rem 2rem;
   box-shadow: $box-shadow;
-  border-radius: 0.5rem;
   outline: none;
 }
 .SearchTitle {
